# BlazingPorts.jl

./: .gitignore  CLAUDE.md  Project.toml  README.md  RESULTS.md
.github/workflows/: CI.yml
bench/: Project.toml  compare_factorizations.jl  harness.jl  plot_blake3_kernels.jl  plot_byteops.jl  plot_byteops_ports.jl  plot_faer_compare.jl  plot_regex.jl  plot_simdjson.jl  plot_simdutf8.jl  probe_argmin.jl  probe_blake3.jl  probe_blake3_kernels.jl  probe_bumpalo.jl  probe_bytecount.jl  probe_byteops_ports.jl  probe_cholesky_autotuned.jl  probe_cholesky_octavian.jl  probe_cholesky_packed.jl  probe_cholesky_port.jl  probe_cholesky_turbo.jl  probe_explog.jl  probe_faer.jl  probe_format_zeroalloc.jl  probe_gemm.jl  probe_gp_tier1.jl  probe_hashbrown.jl  probe_itoa.jl  probe_lexical.jl  probe_matrixmultiply.jl  probe_memchr.jl  probe_microkernel_asm.jl  probe_ndarray.jl  probe_qr.jl  probe_qr_packed.jl  probe_qr_rec_blas.jl  probe_qr_recursive.jl  probe_rand.jl  probe_recursivefactorization.jl  probe_regex.jl  (+9 more)
bench/mkl_amd/: check.jl  check2020.jl  fakeintel.c
bench/results/: argmin_lbfgs.json  blake3.json  blake3_kernels.json  bytecount.json  byteops_ports.json  cholesky_auto_1000x1000.json  cholesky_auto_1024x1024.json  cholesky_auto_1500x1500.json  cholesky_auto_2048x2048.json  cholesky_auto_300x300.json  cholesky_auto_512x512.json  cholesky_octavian_1024x1024.json  cholesky_octavian_128x128.json  cholesky_octavian_256x256.json  cholesky_octavian_512x512.json  cholesky_packed_1024x1024.json  cholesky_packed_2048x2048.json  cholesky_packed_256x256.json  cholesky_packed_512x512.json  cholesky_port_128x128.json  cholesky_port_256x256.json  cholesky_port_512x512.json  cholesky_port_64x64.json  cholesky_turbo_128x128.json  cholesky_turbo_256x256.json  cholesky_turbo_512x512.json  cholesky_turbo_64x64.json  compare_factorizations.json  explog_exp.json  explog_log.json  faer_cholesky_128x128.json  faer_cholesky_128x128_mkl.json  faer_cholesky_256x256.json  faer_cholesky_256x256_mkl.json  faer_cholesky_512x512.json  faer_cholesky_512x512_mkl.json  faer_cholesky_64x64.json  faer_cholesky_64x64_mkl.json  faer_lu_128x128.json  faer_lu_128x128_mkl.json  (+49 more)
bench/rust_compare/: build.sh
bench/rust_compare/rust/: Cargo.toml
bench/rust_compare/rust/src/: lib.rs
dev/: 404.html  factorizations.html  hashmap.json  index.html  objects.inv  ports.html
docs/: Project.toml  make.jl
notes/: simdjl-fused-pipeline-proposal.md
src/: Blake3.jl  BlazingPorts.jl  ByteOps.jl  Factorizations.jl  IntFormat.jl  MatrixMultiply.jl  SmallMatrix.jl  SpecialFns.jl  StringSearch.jl  SwissDict.jl  Utf8.jl
test/: Project.toml  blake3_tests.jl  byteops_tests.jl  factorizations_tests.jl  golden.jl  intformat_tests.jl  matrixmultiply_tests.jl  runtests.jl  smallmatrix_tests.jl  specialfns_tests.jl  strictmode_coverage_tests.jl  stringsearch_tests.jl  swissdict_tests.jl  utf8_tests.jl
upstream_simd_jl/: ISSUE.md  PROMPTS.md
(+134 files in other folders)
