[package]
name = "blazing_compare"
version = "0.1.0"
edition = "2024"

[lib]
name = "blazing_compare"
crate-type = ["cdylib"]

[[bin]]
name = "cholesky_verify"
path = "src/bin/cholesky_verify.rs"

[[bin]]
name = "qr_verify"
path = "src/bin/qr_verify.rs"

# C-ABI shims so Julia can ccall the real Rust crates and benchmark Rust-vs-Julia in the SAME
# process (same thermal/frequency state, interleaved per size) — the only reliable parity probe.
# All probes are SINGLE-THREADED: build/run with RAYON_NUM_THREADS=1; no crate here enables threads.
[dependencies]
matrixmultiply = "0.3"   # bluss gemm microkernel (Tier 1)
libm = "0.2"             # erf / gamma / exp / log reference kernels (Tier 1, statrs/libm)
glam = "0.29"            # Vec3/Vec4/Mat4 SIMD game math (Tier 2)
faer = "0.24"
ndarray = "0.17"
rand = { version = "0.9", features = ["small_rng"] }  # Xoshiro256++ SmallRng (Tier 4)
rand_distr = "0.5"        # StandardNormal, Exp1 samplers (Tier 4)
argmin = "0.11"           # generic optimizer: L-BFGS (Tier 4)
argmin-math = { version = "0.5", features = ["vec"] }  # argmin trait impls for Vec<f64>
memchr = "2"              # SIMD byte/substring search (Tier 1 GP)
itoa = "1"                # int → string (Tier 1 GP)
ryu = "1"                 # float → string (Tier 1 GP)
rustc-hash = "2"          # FxHasher fast integer hash (Tier 1 GP)
ahash = "0.8"             # AES-NI hashing (Tier 1 GP)
hashbrown = "0.15"        # SwissTable hash map (Tier 2 GP)
roaring = "0.10"          # compressed bitsets (Tier 2 GP)
bumpalo = "3"             # bump / arena allocator (Tier 2 GP)

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
